# pancake

./: .gitignore  CMakeLists.txt  brightness.cpp  brightness.h  filenameFunctions.cpp  filenameFunctions.h  gain.cpp  gain.h  pancake.cpp  pancake.sln  temperature.cpp  temperature.h  vibrance.cpp  vibrance.h
Matlab/: SmartPresetDemo.m  harbor.tif
images/: Hockey_image.jfif
